--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "bootstrap": "^5.2.3",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
