--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "bootstrap": "^5.2.3",
-    "next": "13.2.3",
+    "next": "^13.2.4",
     "next-auth": "^4.20.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
     "prisma": "^4.11.0"
   }
 }
